final commit before abandoning

--- a/storytelr.ini
+++ b/storytelr.ini
@@ -1,8 +1,8 @@
 [common]
-title = Storytelr DEMO
+title = Whisper DEMO
 
 # Username and password for the HTTP Basic Auth required to POST a new message
-username = storytelr
+username = whisper
 password = demo
 
 # Number of characters of the URL-safe string to generate used for message IDs
@@ -20,4 +20,4 @@ max_length = 500
 host = 127.0.0.1
 port = 6379
 db = 0
-password = storytelr-demo
+password = whisper-demo
